# asuran

./: .clog.toml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  HALL_OF_FAME.md  LICENSE  README-output.md  README.md  README.org  codecov.yml  release.toml
.cargo/: config
asuran/: Cargo.toml
asuran-chunker/: Cargo.toml  README.md
asuran-chunker/benches/: chunking.rs
asuran-chunker/src/: buzhash.rs  fastcdc.rs  lib.rs  static_size.rs
asuran-cli/: Cargo.toml  LICENSE  README.md  build.rs
asuran-cli/src/: bench.rs  cli.rs  cli.yml  contents.rs  extract.rs  list.rs  main.rs  new.rs  store.rs  util.rs
asuran-core/: Cargo.toml
asuran-core/src/: lib.rs  manifest.rs  repository.rs
asuran-core/src/manifest/: archive.rs  listing.rs
asuran-core/src/repository/: backend.rs  chunk.rs  compression.rs  encryption.rs  hmac.rs  key.rs
asuran-core/src/repository/backend/: flatfile.rs
asuran-core/src/repository/encryption/: aes_shim.rs
asuran/benches/: archive.rs  chunkandstore.rs  rawchunking.rs
asuran/src/: chunker.rs  lib.rs  manifest.rs  prelude.rs  repository.rs
asuran/src/chunker/: slicer.rs
asuran/src/chunker/slicer/: fastcdc.rs
asuran/src/manifest/: archive.rs  driver.rs  listing.rs  target.rs
asuran/src/repository/: backend.rs  encryption.rs  hmac.rs  pipeline.rs
asuran/src/repository/backend/: common.rs  flatfile.rs  mem.rs  multifile.rs  object_wrappers.rs  sftp.rs
asuran/src/repository/backend/common/: files.rs  generic_flatfile.rs  index.rs  manifest.rs  segment.rs  sync_backend.rs
asuran/src/repository/backend/multifile/: index.rs  manifest.rs  segment.rs
asuran/src/repository/backend/sftp/: index.rs  manifest.rs  segment.rs  util.rs
asuran/tests/: common.rs  creation.rs  filesystemtarget.rs  manifest.rs
asuran/tests/inputdata/scodev1/: lib.src
asuran/tests/inputdata/scodev1/manifest/: archive.src
asuran/tests/inputdata/scodev1/repository/: compression.src  encryption.src
benches/: archive.rs  chunkandstore.rs  rawchunking.rs
ci/: lint.yml  linux-arm.yml  linux.yml  macos.yml  windows.yml
src/: chunker.rs  lib.rs  manifest.rs  repository.rs
src/chunker/: slicer.rs
src/chunker/slicer/: buzhash.rs  fastcdc.rs
src/manifest/: archive.rs  driver.rs  target.rs
src/repository/: backend.rs  chunk.rs  compression.rs  encryption.rs  hmac.rs  key.rs  pipeline.rs
src/repository/backend/: common.rs  filesystem.rs  mem.rs  multifile.rs
src/repository/backend/common/: files.rs  manifest.rs  segment.rs
src/repository/backend/multifile/: index.rs  manifest.rs  segment.rs
test_scripts/: prepare_tests.sh  run_tests.sh  start_containers.sh  stop_containers.sh
test_scripts/unix/: prepare_tests.sh  run_coverage.sh  run_tests.sh  start_containers.sh
test_scripts/windows/: run_tests.ps1
tests/: common.rs  filesystemtarget.rs  manifest.rs
tests/inputdata/scodev1/: main.src  manifest.rs
tests/inputdata/scodev1/manifest/: target.rs
