[package]
name = "libasuran"
description = "Deduplicating, encrypting, fast, and tamper evident archive format"
license = "MIT"
version = "0.0.2"
repository = "https://gitlab.com/asuran-rs/libasuran/"
documentation = "https://docs.rs/crate/libasuran"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
readme = "README-output.md"
edition = "2018"
keywords = ["encryption", "compression","deduplication","backup","archive"]

[features]
profile = ["flame", "flamer"]

[dependencies]
aes = "0.3.2"
aes-ctr = "0.3.0"
block-modes = "0.3.3"
base64 = "0.11"
zstd = "0.5"
rust-argon2 = "0.6"
rand = {version = "0.7", features=["small_rng"]}
zeroize = { version  = "1.0.0", features = ["zeroize_derive"]}
hmac = "0.7"
sha2 = "0.8"
digest = "0.8"
walkdir = "2.2"
serde = { version = "1.0", features = ["derive", "rc"]}
rmp-serde = "0.14"
serde_bytes = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.1"
flame = {version = "0.2", optional = true}
flamer = {version = "0.4", optional = true}
blake2b_simd = "0.5"
fastcdc = "1.0"
rayon = "1.2.1"
futures = "0.3"
anyhow = "1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"
dir-diff = "0.3"
criterion = "0.3"

[[bench]]
name = "rawchunking"
harness = false

[[bench]]
name = "chunkandstore"
harness = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[profile.release]
codegen-units = 1
lto = true