[package]
name = "asuran-chunker"
description = "A general API for describing types that can break data in to chunks in repeatable ways"
license = "BSD-2-Clause-Patent"
version = "0.1.1-alpha.1"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
readme = "README.md"

[features]
streams = ["tokio", "futures"]

[dependencies]
fastcdc = "1.0.3"
futures = { version = "0.3.4", default-features = false, features = ["std"], optional = true }
rand = "0.7.3"
rand_chacha = "0.2.2"
thiserror = "1.0.15"
tokio = { version = "0.2.18", features = ["rt-core","rt-threaded", "macros", "sync", "blocking"], optional = true }

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "chunking"
harness = false
