[package]
name = "asuran-chunker"
description = "A general API for describing types that can break data in to chunks in repeatable ways"
license = "BSD-2-Clause-Patent"
version = "0.1.4-alpha.1"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
readme = "README.md"

[features]
streams = ["smol", "futures"]

[dependencies]
fastcdc = "1.0.3"
futures = { version = "0.3.5", default-features = false, features = ["std"], optional = true }
rand = "0.7.3"
rand_chacha = "0.2.2"
smol = { version = "0.1.8", optional = true }
thiserror = "1.0.18"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "chunking"
harness = false
