[package]
name = "asuran-cli"
description = "Deduplicating, secure, tamper resistant archiver"
license = "BSD-2-Clause-Patent"
version = "0.0.11-alpha.0"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran-cli"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
build = "build.rs"
readme = "README.md"

[dependencies]
anyhow = "1.0.28"
asuran = { version = "0.0.11-alpha.0", path = "../asuran" }
async-trait = "0.1.30"
chrono = "0.4.11"
clap = { version = "2.33.0", features = ["yaml"] }
futures = "0.3.4"
globset = "0.4.5"
prettytable-rs = "0.8.0"
read_input = "0.8.4"
rpassword = "4.0.5"
structopt = "0.3.13"
tokio = { version = "0.2.18", features = ["full"] }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

[build-dependencies]
vergen = "3.1.0"

