[package]
name = "asuran-cli"
description = "Deduplicating, secure, tamper resistant archiver"
license = "BSD-2-Clause-Patent"
version = "0.1.6-alpha.1"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran-cli"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
build = "build.rs"
readme = "README.md"
[features]
default = ["all-chunk", "all-backend"]
# Rexports of asuran features
blake2b = ["asuran/blake2b"]
lzma = ["asuran/lzma"]
aes-family = ["asuran/aes-family"]
chacha-family = ["asuran/chacha-family"]
all-encryption = ["asuran/all-encryption"]
all-compression = ["asuran/all-compression"]
all-hmac = ["asuran/all-hmac"]
all-chunk = ["asuran/all-chunk"]
all-backend = ["asuran/all-backend"]
sftp = ["asuran/sftp"]
only-local-backends = ["asuran/only-local-backends"]
# Vendor OpenSSL for the sftp backend
vendored-openssl = ["asuran/vendored-openssl"]

[dependencies]
anyhow = "1.0.31"
asuran = { version = "= 0.1.6-alpha.1", path = "../asuran", default-features = false }
async-trait = "0.1.31"
chrono = "0.4.11"
clap = { version = "2.33.1", features = ["yaml"] }
futures = "0.3.5"
globset = "0.4.5"
num_cpus = "1.13.0"
piper = "0.1.3"
prettytable-rs = "0.8.0"
read_input = "0.8.4"
rpassword = "4.0.5"
smol = "0.1.10"
structopt = "0.3.14"
tracing = "0.1.14"
tracing-subscriber = "0.2.5"

[build-dependencies]
vergen = "3.1.0"

