[package]
name = "asuran-cli"
description = "Deduplicating, secure, tamper resistant archiver"
license = "BSD-2-Clause-Patent"
version = "0.1.6-alpha.1"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran-cli"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
build = "build.rs"
readme = "README.md"
[features]
default = ["all-chunk", "all-backend"]
# Rexports of asuran features
blake2b = ["asuran/blake2b"]
lzma = ["asuran/lzma"]
aes-family = ["asuran/aes-family"]
chacha-family = ["asuran/chacha-family"]
all-encryption = ["asuran/all-encryption"]
all-compression = ["asuran/all-compression"]
all-hmac = ["asuran/all-hmac"]
all-chunk = ["asuran/all-chunk"]
all-backend = ["asuran/all-backend"]
sftp = ["asuran/sftp"]
only-local-backends = ["asuran/only-local-backends"]
# Vendor OpenSSL for the sftp backend
vendored-openssl = ["asuran/vendored-openssl"]
blake3-neon = ["asuran/blake3-neon"]

[dependencies]
anyhow = "1.0.31"
asuran = { version = "= 0.1.6-alpha.1", path = "../asuran", default-features = false }
async-channel = "1.1.0"
async-trait = "0.1.36"
chrono = "0.4.11"
clap = { version = "2.33.1"}
futures = { version = "0.3.5", default-features = false }
globset = "0.4.5"
num_cpus = "1.13.0"
prettytable-rs = { version = "0.8.0", default-features = false }
smol = "0.1.17"
structopt = "0.3.15"
tracing = "0.1.15"

[build-dependencies]
vergen = "3.1.0"

