[package]
name = "asuran-core"
license = "MIT"
version = "0.0.5"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
keywords = ["encryption", "compression","deduplication","backup","archive"]
description = "Core data structures used by the asuran archive format"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["core", "aes", "chacha20"]
core = ["aes-ctr"]

[dependencies]
aes = { version = "0.3.2", optional = true }
aes-ctr = { version = "0.3.0", optional = true }
blake2b_simd = "0.5.10"
blake3 = "0.2.1"
block-modes = "0.3.3"
byteorder = "1.3.4"
cfg-if = "0.1.10"
chacha20 = { version = "0.3.3", optional = true }
chrono = { version = "0.4.10", features = ["serde"] }
hmac = "0.7.1"
lz4 = "1.23.1"
rand = "0.7.3"
rmp-serde = "0.14.3"
rust-argon2 = "0.8.1"
semver = "0.9.0"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_bytes = "0.11.3"
sha2 = "0.8.1"
sha3 = "0.8.2"
stream-cipher = "0.3.2"
thiserror = "1.0.11"
uuid = "0.8.1"
xz2 = "0.1.6"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
zstd = "0.5.1"
