[package]
name = "asuran-core"
license = "MIT"
version = "0.0.5"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
keywords = ["encryption", "compression","deduplication","backup","archive"]
description = "Core data structures used by the asuran archive format"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all-encryption", "all-compression", "all-hmac"]
core = ["aes-ctr", "blake3", "zstd"]
# Convience renames
blake2b = ["blake2b_simd"]
lzma = ["xz2"]
# Groups
aes-family = ["aes-ctr", "aes"]
chacha-family = ["chacha20"]
# Group of all of a type
all-encryption = ["aes-family", "chacha-family"]
all-compression = ["zstd", "lz4", "lzma"]
all-hmac = ["blake2b", "blake3", "sha2", "sha3"]

[dependencies]
aes = { version = "0.3.2", optional = true }
aes-ctr = { version = "0.3.0", optional = true }
blake2b_simd = { version = "0.5.10", optional = true }
blake3 = { version = "0.2.1", optional = true }
block-modes = "0.3.3"
byteorder = "1.3.4"
cfg-if = "0.1.10"
chacha20 = { version = "0.3.3", optional = true }
chrono = { version = "0.4.10", features = ["serde"] }
hmac = "0.7.1"
lz4 = { version = "1.23.1", optional = true }
rand = "0.7.3"
rmp-serde = "0.14.3"
rust-argon2 = "0.8.1"
semver = "0.9.0"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_bytes = "0.11.3"
sha2 = { version = "0.8.1", optional = true }
sha3 = { version = "0.8.2", optional = true }
stream-cipher = "0.3.2"
thiserror = "1.0.11"
uuid = "0.8.1"
xz2 = { version = "0.1.6", optional = true }
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
zstd = { version = "0.5.1", optional = true }
