[package]
name = "asuran-core"
license = "BSD-2-Clause-Patent"
version = "0.1.4-alpha.1"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
keywords = ["encryption", "compression","deduplication","backup","archive"]
description = "Core data structures used by the asuran archive format"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all-chunk"]
core = ["aes-family", "blake3", "zstd"]
# Convience renames
blake2b = ["blake2b_simd"]
lzma = ["xz2"]
# Groups
aes-family = ["aes-soft", "ctr"]
chacha-family = ["chacha20"]
# Group of all of a type
all-encryption = ["aes-family", "chacha-family"]
all-compression = ["zstd", "lz4", "lzma"]
all-hmac = ["blake2b", "blake3", "sha2", "sha3"]
all-chunk = ["all-encryption", "all-compression", "all-hmac"]

[dependencies]
aes-soft = { version = "0.3.3", optional = true }
blake2b_simd = { version = "0.5.10", optional = true }
blake3 = { version = "0.3.4", optional = true }
byteorder = "1.3.4"
cfg-if = "0.1.10"
chacha20 = { version = "0.3.4", optional = true }
chrono = { version = "0.4.11", features = ["serde"] }
ctr = { version = "0.3.2", optional = true }
hmac = "0.7.1"
lz4 = { version = "1.23.1", optional = true }
rand = "0.7.3"
rmp-serde = "0.14.3"
rust-argon2 = "0.8.2"
semver = "0.10.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_bytes = "0.11.4"
sha2 = { version = "0.8.2", optional = true }
sha3 = { version = "0.8.2", optional = true }
stream-cipher = "0.3.2"
thiserror = "1.0.19"
tracing = "0.1.14"
uuid = "0.8.1"
xz2 = { version = "0.1.6", optional = true }
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
zstd = { version = "0.5.2", optional = true }
block-cipher-trait = "0.6.2"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
aesni = { version = "0.6.0", features = ["ctr", "nocheck"] }
