[package]
name = "asuran"
description = "Deduplicating, encrypting, fast, and tamper evident archive format"
license = "MIT"
version = "0.0.7"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
keywords = ["encryption", "compression","deduplication","backup","archive"]
readme = "README.md"

[dependencies]
asuran-chunker = { version = "0.0.7" , path = "../asuran-chunker/", features = ["streams"] }
asuran-core = { version = "0.0.7", path = "../asuran-core/" }
async-trait = "0.1.24"
base64 = "0.11.0"
bincode = "1.2.1"
byteorder = "1.3.4"
chrono = { version = "0.4.10", features = ["serde"] }
fastcdc = "1.0.2"
futures = { version = "0.3.4", default-features = false, features = ["std"] }
futures-intrusive = "0.3.0"
lazy_static = "1.4.0"
lru = { version = "0.4.3", default-features = false }
num_cpus = "1.12.0"
petgraph = "0.5.0"
rand = { version = "0.7.3", features = ["small_rng"] }
rmp-serde = "0.14.3"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_bytes = "0.11.3"
thiserror = "1.0.11"
tokio = { version = "0.2.11", features = ["rt-core","rt-threaded", "macros", "sync", "blocking"] }
tracing = "0.1.12"
tracing-futures = "0.2.2"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
walkdir = "2.3.1"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.3.1"
dir-diff = "0.3.2"
futures-await-test = "0.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tempfile = "3.1.0"

[[bench]]
name = "chunkandstore"
harness = false

[[bench]]
name = "archive"
harness = false


