[package]
name = "asuran"
description = "Deduplicating, encrypting, fast, and tamper evident archive format"
license = "BSD-2-Clause-Patent"
version = "0.1.1-alpha.1"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
keywords = ["encryption", "compression","deduplication","backup","archive"]
readme = "README.md"

[features]
default = ["all-chunk", "all-backend"]

# Rexports of asuran-core features
blake2b = ["asuran-core/blake2b"]
lzma = ["asuran-core/lzma"]
aes-family = ["asuran-core/aes-family"]
chacha-family = ["asuran-core/chacha-family"]
all-encryption = ["asuran-core/all-encryption"]
all-compression = ["asuran-core/all-compression"]
all-hmac = ["asuran-core/all-hmac"]
all-chunk = ["asuran-core/all-chunk"]
# Groups of all of a type
all-backend = [] # Placeholder for when we have features for backends

[dependencies]
asuran-chunker = { version = "^0.1.1-alpha.1", path = "../asuran-chunker/", features = ["streams"] }
asuran-core = { version = "^0.1.1-alpha.1", path = "../asuran-core/", default-features = false }
async-trait = "0.1.30"
base64 = "0.12.0"
bincode = "1.2.1"
byteorder = "1.3.4"
chrono = { version = "0.4.11", features = ["serde"] }
fastcdc = "1.0.3"
futures = { version = "0.3.4", default-features = false, features = ["std","executor"] }
lazy_static = "1.4.0"
lru = { version = "0.4.3", default-features = false }
num_cpus = "1.13.0"
petgraph = "0.5.0"
piper = "0.1.1"
rand = { version = "0.7.3", features = ["small_rng"] }
rmp-serde = "0.14.3"
semver = "0.9.0"
serde = { version = "1.0.106", features = ["derive", "rc"] }
serde_bytes = "0.11.3"
smol = "0.1.2"
thiserror = "1.0.15"
tokio = { version = "0.2.18", features = ["rt-core","rt-threaded", "macros", "sync", "blocking"] }
tracing = "0.1.13"
tracing-futures = "0.2.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
walkdir = "2.3.1"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.3.1"
dir-diff = "0.3.2"
futures-await-test = "0.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tempfile = "3.1.0"

[[bench]]
name = "chunkandstore"
harness = false

[[bench]]
name = "archive"
harness = false


