[package]
name = "asuran"
description = "Deduplicating, encrypting, fast, and tamper evident archive format"
license = "BSD-2-Clause-Patent"
version = "0.1.6-alpha.1"
repository = "https://gitlab.com/asuran-rs/asuran/"
documentation = "https://docs.rs/crate/asuran"
homepage = "https://asuran.rs"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
keywords = ["encryption", "compression","deduplication","backup","archive"]
readme = "README.md"

[features]
default = ["all-chunk", "all-backend"]
sftp = ["ssh2"]
only-local-backends = ["all-chunk"]

# Rexports of asuran-core features
blake2b = ["asuran-core/blake2b"]
lzma = ["asuran-core/lzma"]
aes-family = ["asuran-core/aes-family"]
chacha-family = ["asuran-core/chacha-family"]
all-encryption = ["asuran-core/all-encryption"]
all-compression = ["asuran-core/all-compression"]
all-hmac = ["asuran-core/all-hmac"]
all-chunk = ["asuran-core/all-chunk"]
# Groups of all of a type
all-backend = ["sftp"] # Placeholder for when we have features for backends
# Vendor OpenSSL for the sftp backend
vendored-openssl = ["ssh2/vendored-openssl"]
blake3-neon = ["asuran-core/blake3-neon"]

[dependencies]
asuran-chunker = { version = "= 0.1.6-alpha.1", path = "../asuran-chunker/", features = ["streams"] }
asuran-core = { version = "= 0.1.6-alpha.1", path = "../asuran-core/", default-features = false }
async-trait = "0.1.35"
base64 = "0.12.1"
bincode = "1.2.1"
byteorder = "1.3.4"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.4.2"
dashmap = "3.11.4"
futures = { version = "0.3.5", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
lru = { version = "0.5.1", default-features = false }
num_cpus = "1.13.0"
petgraph = { version = "0.5.1", default-features = false }
piper = "0.1.3"
rand = "0.7.3"
semver = "0.10.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_bytes = "0.11.4"
serde_cbor = "0.11.1"
smol = "0.1.11"
ssh2 = { version = "0.8.1", optional = true }
thiserror = "1.0.19"
tracing = "0.1.15"
tracing-futures = "0.2.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
walkdir = "2.3.1"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.3.2"
dir-diff = "0.3.2"
futures-await-test = "0.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tempfile = "3.1.0"
rand = { version = "0.7.3", features = ["small_rng"] }

[[bench]]
name = "chunkandstore"
harness = false

[[bench]]
name = "archive"
harness = false


